--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <div id="user_score"></div>
 <div id="rps_game">
+    <button id="clear_scores">clear scores</button>
     <h1>rock beats scissors paper beats rock scissors beat paper</h1>
     <div id="count_box"></div>
     <div id="my_choice">
