very very simplified

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>rock beats scissors paper beats rock scissors beat paper</h1>
     <div id="count_box"></div>
     <div id="my_choice">
-        <div class="rps_choice rps_rock" data-rps="1"></div>
-        <div class="rps_choice rps_paper" data-rps="2"></div>
-        <div class="rps_choice rps_scissors" data-rps="3"></div>
+        <div class="rps_choice rps_rock"></div>
+        <div class="rps_choice rps_paper"></div>
+        <div class="rps_choice rps_scissors"></div>
     </div>
     <div id="cp_choice" data-rps=""></div>
 </div>
