--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div id="cp_choice" data-rps=""></div>
 </div>
+<div id="rps_score"><span class="fiveBars">||||</span><span>||</span></div>
 <script src="rps.js"></script>
 </body>
 </html>
