--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="rps_game">
-    <h1>rock beats scissors paper beats rock scissors beat paper</h1>
+<h1>rock beats scissors scissors beat paper paper beats rock</h1>
     <div id="count_box"></div>
     <div id="my_choice">
         <div class="rps_choice rps_rock"></div>
