--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
 </head>
 <body>
     <div class="rps_container">
-        <div id="rps_score"><span></span></div>
+        <div id="rps_user-score"><span></span></div>
         <div id="rps_game">
             <h1>rock beats scissors scissors beat paper paper beats rock</h1>
-            <div id="count_box"></div>
-            <div id="my_choice">
+            <div id="rps_user-choice">
                 <div class="rps_choice rps_rock"></div>
                 <div class="rps_choice rps_paper"></div>
                 <div class="rps_choice rps_scissors"></div>
             </div>
-            <div id="cp_choice" data-rps=""></div>
+            <div id="rps_cp-choice" data-rps=""></div>
         </div>
-        <div id="rps_score_cp"><span></span></div>
+        <div id="rps_cp-score"><span></span></div>
     </div>
     <script src="rps.js"></script>
 </body>
