--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="rps.css"/>
 </head>
 <body>
+    <h1>rock beats scissors beat paper beats rock</h1>
     <div class="rps_container">
         <div id="rps_user-score"><span></span></div>
         <div id="rps_game">
-            <h1>rock beats scissors scissors beat paper paper beats rock</h1>
             <div id="rps_user-choice">
                 <div class="rps_choice rps_rock"></div>
                 <div class="rps_choice rps_paper"></div>
