display cp choice inside another div (contained in cp-choice)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="rps_choice rps_paper"></div>
                 <div class="rps_choice rps_scissors"></div>
             </div>
-            <div id="rps_cp-choice" data-rps=""></div>
+            <div id="rps_cp-choice"><div></div></div>
         </div>
         <div id="rps_cp-score"><span></span></div>
     </div>
