--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Rock, paper, scissors</title>
-    <link rel="stylesheet" href="rps.css"/>
+    <link rel="stylesheet" href="css/rps.css"/>
 </head>
 <body>
     <h1>rock beats scissors beat paper beats rock</h1>
@@ -19,6 +19,6 @@
         </div>
         <div id="rps_cp-score"><span></span></div>
     </div>
-    <script src="rps.js"></script>
+    <script src="js/rps.js"></script>
 </body>
 </html>
