--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Rock, paper, scissors</title>
-    <link rel="stylesheet" href="css/rps.css"/>
+    <link rel="stylesheet" href="build/rps.css"/>
 </head>
 <body>
     <h1>rock beats scissors beat paper beats rock</h1>
