--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="rps_user-choice">
                 <div class="rps_choice rps_rock"></div>
                 <div class="rps_choice rps_paper"></div>
-                <div class="rps_choice rps_scissors"></div>
+                <div class="rps_choice rps_scissors">||</div>
             </div>
             <div id="rps_cp-choice"><div></div></div>
         </div>
